@@ -26,12 +26,14 @@
 #include <stdio.h>
 
 #if POSTGIS_SFCGAL_VERSION >= 20100
-#define sfcgal_triangulated_surface_num_triangles(g) sfcgal_geometry_num_geometries((g))
-#define sfcgal_triangulated_surface_triangle_n(g,i)  sfcgal_geometry_get_geometry_n((g), (i))
-#define sfcgal_polyhedral_surface_num_polygons(g)    sfcgal_geometry_num_geometries((g))
-#define sfcgal_polyhedral_surface_polygon_n(g,i)     sfcgal_geometry_get_geometry_n((g), (i))
+#define sfcgal_triangulated_surface_num_triangles(g) sfcgal_geometry_num_patches((g))
+#define sfcgal_triangulated_surface_triangle_n(g,i) sfcgal_triangulated_surface_patch_n((g), (i))
+#define sfcgal_triangulated_surface_add_triangle(g, p) sfcgal_triangulated_surface_add_patch((g), (p))
+#define sfcgal_polyhedral_surface_num_polygons(g) sfcgal_polyhedral_surface_num_patches((g))
+#define sfcgal_polyhedral_surface_polygon_n(g,i) sfcgal_polyhedral_surface_patch_n((g), (i))
 #define sfcgal_geometry_collection_num_geometries(g) sfcgal_geometry_num_geometries((g))
-#define sfcgal_geometry_collection_geometry_n(g,i)   sfcgal_geometry_get_geometry_n((g), (i))
+#define sfcgal_geometry_collection_geometry_n(g,i) sfcgal_geometry_get_geometry_n((g), (i))
+#define sfcgal_polyhedral_surface_add_polygon(g, p) sfcgal_polyhedral_surface_add_patch((g), (p))
 #endif
 
 static int SFCGAL_type_to_lwgeom_type(sfcgal_geometry_type_t type);
