@@ -20,6 +20,7 @@ PostgreSQL 12-18 required. GEOS 3.8+ required. Proj 6.1+ required.
 - #5829, geometry_columns with non-standard constraints (Paul Ramsey)
 - #5818, GT-244 Fix CG_IsSolid function (Loïc Bartoletti)
 - #5885, Fix documentation about grid-based overlay operations (Sandro Santilli)
+- For SFCGAL 2.1.0+ prevent using deprecated functions (Regina Obe)
 
 PostGIS 3.5.2
 2025/01/18
